Add vertical scrollbar to code snippet and fix image URL

--- a/snippets.html
+++ b/snippets.html
@@ -3,8 +3,27 @@
 <head>
     <title>Sample HTML Document</title>
      <link rel="stylesheet" href="css/codeSnnipet.css">
+     <link rel="stylesheet" href="css/header.css">
+     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Poppins:wght@800&family=Space+Grotesk:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header class="navbar" style="position: fixed; z-index: 999; width: 100%; height: fit-content;">
+    <div class="logo">
+        <img src="assets/logo.png" alt="gdg logo">
+        </div>
+    <nav class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="Event.html">Events</a>
+        <a href="team.html">Members</a>
+        <a href="snippets.html">Code Snippets</a>
+    </nav>
+    <div class="nav-socials">
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-github"></i></a>
+    </div>
+</header>
     <div id="code-container"></div>
     <div id="main-container"></div>
 
